deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenwebapp-dp
  labels:
    app: mavenwebapp
spec:
  replicas: 4
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 30
  selector:
    matchLabels:
       app: mavenwebapp
  template:
    metadata:
      name: mavenwebapp-pod
      labels:
        app: mavenwebapp
    spec:
      imagePullSecrets:
      - name: regcrd
      containers:
      - name: mavenwebapp-container
        image: xxxxxxxxxxxx.dkr.ecr.us-east-1.amazonaws.com/mavenwebapp:mavenwebapp-VERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 800m
            memory: 1Gi
 
---

apiVersion: v1
kind: Service
metadata:
  name: mavenwebapp-svc
spec:
  selector:
    app: mavenwebapp
  ports:
  - port: 8080
    targetPort: 8080
