ingress-resource-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-mavenwebapp
    annotations:
      kubernetes.io/ingress.class: "nginx"
    namespace: default
spec:
    rules:
    - host: test.com
      http:
        paths:
        - backend:
            serviceName: mavenwebapp-svc
            servicePort: 8080
          path: /
